Cycles - Principled BSDF Shader - Transparency is not working as expected #51408

Closed
opened 2017-05-04 08:21:56 +02:00 by Carlo Andreacchio · 22 comments

System Information
Ubuntu 17.04

Blender Version
Broken: 2836003f6b

Short description of error
Transparency on the Principled BSDF shader is not working as expected

Exact steps for others to reproduce the error

  1. Open attached blend file
  2. Go into rendered mode

Image plane on the left is using a normal diffuse / transparency combo, that is how I want it to work
Image plane on the right is using the principled BSDF shader, setting it up we noticed that transparency is acting more like reflections. Its transparency value is 1, so it should be totally transparent instead of being reflective

Plugging the alpha from the billboard.png into the transparency input also doesnt work as expected either.

bug.blend

**System Information** Ubuntu 17.04 **Blender Version** Broken: 2836003f6b **Short description of error** Transparency on the Principled BSDF shader is not working as expected **Exact steps for others to reproduce the error** 1. Open attached blend file 2. Go into rendered mode Image plane on the left is using a normal diffuse / transparency combo, that is how I want it to work Image plane on the right is using the principled BSDF shader, setting it up we noticed that transparency is acting more like reflections. Its transparency value is 1, so it should be totally transparent instead of being reflective Plugging the alpha from the billboard.png into the transparency input also doesnt work as expected either. [bug.blend](https://archive.blender.org/developer/F587135/bug.blend)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @candreacchio

Added subscriber: @candreacchio

Added subscribers: @PascalSchon, @brecht, @Sergey

Added subscribers: @PascalSchon, @brecht, @Sergey
Pascal Schön was assigned by Sergey Sharybin 2017-05-04 16:40:23 +02:00

Principled transparency is more a real glass transparency, which is different from transparent BSDF.

To me it seems Principled BSDF is for the real-life objects, while transparent BSDF can be used for tricks like you use for trees.

Final decision i'll leave up to @brecht and @VanCantus.

Principled transparency is more a real glass transparency, which is different from transparent BSDF. To me it seems Principled BSDF is for the real-life objects, while transparent BSDF can be used for tricks like you use for trees. Final decision i'll leave up to @brecht and @VanCantus.

Added subscriber: @SteffenD

Added subscriber: @SteffenD

To follow Cycles naming conventions I suggest we rename this socket to "Transmission" (and "Transmission Roughness"). It's a trade-off between following the Disney naming convention and our own, but I think in this case clearly distinguishing from the Transparent BSDF is more important.

Both cutout transparency and transmission are useful, they're just different things. I think it would even make sense to add a support for cutout transparency (and emission) to the Principled BSDF eventually.

To follow Cycles naming conventions I suggest we rename this socket to "Transmission" (and "Transmission Roughness"). It's a trade-off between following the Disney naming convention and our own, but I think in this case clearly distinguishing from the Transparent BSDF is more important. Both cutout transparency and transmission are useful, they're just different things. I think it would even make sense to add a support for cutout transparency (and emission) to the Principled BSDF eventually.
Member

I will do the changes as Brecht stated and I will also figure out how to do the cutout transparency. I can also add the emission shading if this is a liked feature for the principled shader.

I will do the changes as Brecht stated and I will also figure out how to do the cutout transparency. I can also add the emission shading if this is a liked feature for the principled shader.

Added subscriber: @matali23

Added subscriber: @matali23

In #51408#432279, @PascalSchon wrote:
I will do the changes as Brecht stated and I will also figure out how to do the cutout transparency. I can also add the emission shading if this is a liked feature for the principled shader.

We can then the principled shader only. Awesome :)

> In #51408#432279, @PascalSchon wrote: > I will do the changes as Brecht stated and I will also figure out how to do the cutout transparency. I can also add the emission shading if this is a liked feature for the principled shader. We can then the principled shader only. Awesome :)

Added subscriber: @bliblubli

Added subscriber: @bliblubli

In #51408#432279, @PascalSchon wrote:
I can also add the emission shading if this is a liked feature for the principled shader.

It is :)

> In #51408#432279, @PascalSchon wrote: > I can also add the emission shading if this is a liked feature for the principled shader. It is :)

Added subscriber: @angavrilov

Added subscriber: @angavrilov

Well, I think that emission and cutout transparency (i.e. holes) can be handled perfectly well by mixing in other nodes, unlike translucency (diffuse transmission, which should share energy with diffuse after glossy), so it's not a priority; and the node may have enough parameters already. Also, is somebody writing a manual entry for it already? ;)

Well, I think that emission and cutout transparency (i.e. holes) can be handled perfectly well by mixing in other nodes, unlike translucency (diffuse transmission, which should share energy with diffuse after glossy), so it's not a priority; and the node may have enough parameters already. Also, is somebody writing a manual entry for it already? ;)

I think we definitely need to make the Principled BSDF complete enough that you don't need to mix in other closures, that's kind of the whole point. To make it faster for users to set up materials, and to provide a standard node for things like texture painting and material import/export. Not saying it has to be done right now or as part of this bug report, but certainly at some point.

I think we definitely need to make the Principled BSDF complete enough that you don't need to mix in other closures, that's kind of the whole point. To make it faster for users to set up materials, and to provide a standard node for things like texture painting and material import/export. Not saying it has to be done right now or as part of this bug report, but certainly at some point.

If I understand the physics correctly, the Transparency node should be basically equivalent to 'glass-type' transparency with IOR exactly equal to 1: all reflection and refraction effects (including microfacet roughness) disappear, and only surface absorption remains. If so, maybe the node could potentially use the transparency closure as a special case if the index of refraction is set to 1. Even now, it seems to work as you would expect: no reflections/refractions, and the transmitted light is multiplied by color.

The main problem in using this for cutouts is that transparency shares the base color with the rest of the shader, whereas for alpha transparency you want the transparency component to use pure white.

If I understand the physics correctly, the Transparency node should be basically equivalent to 'glass-type' transparency with IOR exactly equal to 1: all reflection and refraction effects (including microfacet roughness) disappear, and only surface absorption remains. If so, maybe the node could potentially use the transparency closure as a special case if the index of refraction is set to 1. Even now, it seems to work as you would expect: no reflections/refractions, and the transmitted light is multiplied by color. The main problem in using this for cutouts is that transparency shares the base color with the rest of the shader, whereas for alpha transparency you want the transparency component to use pure white.

We interpret transparency as the absence of geometry, it should not be considered the same as refraction with IOR 1.
https://docs.blender.org/manual/en/dev/render/cycles/settings/light_paths.html#transparency

We interpret transparency as the absence of geometry, it should not be considered the same as refraction with IOR 1. https://docs.blender.org/manual/en/dev/render/cycles/settings/light_paths.html#transparency

This issue was referenced by blender/cycles@36799e8e57

This issue was referenced by blender/cycles@36799e8e57394f395519470812f9cb187e54eca3

This issue was referenced by 32c9d2322c

This issue was referenced by 32c9d2322ccbf1bcfbe8a320d1e334d5e5d63d7b

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

I renamed the inputs as @brecht suggested. For the additional inputs I will first create a new differential which then can be approved and committed.

I renamed the inputs as @brecht suggested. For the additional inputs I will first create a new differential which then can be approved and committed.

Added subscriber: @LindsayPatten

Added subscriber: @LindsayPatten

In #51408#432903, @angavrilov wrote:
Well, I think that emission and cutout transparency (i.e. holes) can be handled perfectly well by mixing in other nodes, unlike translucency (diffuse transmission, which should share energy with diffuse after glossy), so it's not a priority; and the node may have enough parameters already. Also, is somebody writing a manual entry for it already? ;)

I could be wrong but my understanding is that there are problems with combining the Principled shader with the transparent node. To create a transparent but glossy material the nodes need to mix the diffuse and transparent nodes and then mix the result with glossy, if the mixing is done the other way the alpha transparency will remove the glossiness. But the output of the transparent node is BSDF and the input to Principled is color so there is no way to put the transparent node before the Principled node in order to preserve the specular reflections that Principled creates. Also, if you use base color of white and transmission of 1 and IOR of 1.0 you can achieve (near?) complete transparency but it takes a lot of samples to reduce the very prominent noise, even after 1000 samples you could still see where the transparent mesh was if you looked for it. With a texture with an alpha channel the RGB channels are all black when the alpha channel creates complete transparency so if they are fed into the base color you end up with an opaque black surface because transmission is multiplied by base color. For complete transparency you can work around that by mixing the color from the image texture with white, using the alpha channel as the factor, but that doesn't work for partial transparency.

So, using diffuse textures with an alpha channel with the Principled shader is problematic. So some sort of extra input on the Principled shader that handles alpha transparency would be very useful. I've been trying to generate node networks that use the Principled shader for MakeHuman, but I don't think it is currently possible because MakeHuman uses a lot of alpha transparency including partial transparency.

My apologies if I've got this all wrong or if the way MakeHuman uses transparency is inappropriate.

> In #51408#432903, @angavrilov wrote: > Well, I think that emission and cutout transparency (i.e. holes) can be handled perfectly well by mixing in other nodes, unlike translucency (diffuse transmission, which should share energy with diffuse after glossy), so it's not a priority; and the node may have enough parameters already. Also, is somebody writing a manual entry for it already? ;) I could be wrong but my understanding is that there are problems with combining the Principled shader with the transparent node. To create a transparent but glossy material the nodes need to mix the diffuse and transparent nodes and then mix the result with glossy, if the mixing is done the other way the alpha transparency will remove the glossiness. But the output of the transparent node is BSDF and the input to Principled is color so there is no way to put the transparent node before the Principled node in order to preserve the specular reflections that Principled creates. Also, if you use base color of white and transmission of 1 and IOR of 1.0 you can achieve (near?) complete transparency but it takes a lot of samples to reduce the very prominent noise, even after 1000 samples you could still see where the transparent mesh was if you looked for it. With a texture with an alpha channel the RGB channels are all black when the alpha channel creates complete transparency so if they are fed into the base color you end up with an opaque black surface because transmission is multiplied by base color. For complete transparency you can work around that by mixing the color from the image texture with white, using the alpha channel as the factor, but that doesn't work for partial transparency. So, using diffuse textures with an alpha channel with the Principled shader is problematic. So some sort of extra input on the Principled shader that handles alpha transparency would be very useful. I've been trying to generate node networks that use the Principled shader for MakeHuman, but I don't think it is currently possible because MakeHuman uses a lot of alpha transparency including partial transparency. My apologies if I've got this all wrong or if the way MakeHuman uses transparency is inappropriate.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
10 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#51408
No description provided.