Fix T51408: Cycles - Principled BSDF Shader - Transparency is not working as expected

Renamed the "Transparency" input of the Principled BSDF to
"Transmission" and "Refraction Roughness" to "Transmission Roughness".